finish translations ui
